# lights-app

./: .gitignore  app.py  install.sh  lights.service  readme.md  uninstall.sh
frontend/: README.md  app.py  index.html  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.jsx  App.vue
frontend/src/components/: MainToggle.jsx  ModeSelect.jsx  Select.vue  Slider.jsx  Slider.vue  Toggle.vue
rust/: Cargo.toml
rust/assets/: index.html  scripts.js  styles.css
rust/src/: _state.rs  _template.rs  appstate.rs  main.rs  mylog.rs  state.rs
rust/src/lights/: color.rs  controller.rs  driver.rs  mod.rs  params.rs
rust/src/lights/driver/: config.rs  led_driver.rs  mod.rs  test_driver.rs
rust/src/lights/modes/: mod.rs  set_driver.rs
rust/src/mode/: mod.rs  params.rs  solid.rs
rust/src/webapp/: main_app.rs  mod.rs  redirect.rs  shutdown.rs  websocket.rs
rust/templates/: index.html
