[package]
name = "lights-app"
version = "0.1.0"
edition = "2021"

[dependencies]
# light controller for raspberry pi
rs_ws281x = { path = "../rpi-ws281x-rust"}
# web server stuff
askama = "0.12.1"
axum = "0.7.9"
axum-extra = "0.9.6"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
http-body-util = "0.1.2"
hyper = { version = "1.5.1", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
tokio = { version = "1.41.1", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["fs"] }
serde_with = { version = "3.11.0", features = ["macros"] }
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
anyhow = "1.0.93"
syslog = "7.0.0"
log = "0.4.22"
